# GeomechPy

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
geomechPy/: Elastic_Properties.py  Stress_calculations.py  Utilities.py  test.py
geomechpy/: elastic_properties.py  main.py  overburden_stress.py  pore_pressure.py  rock_strength.py  static_elastic_properties.py  stress_calculations.py  test.py  wellbore_Stability.py  wellbore_stability.py
testing_scripts/: ep_test.py
tests/: test_elastic_properties.py  test_overburden_stress.py  test_pore_pressure.py  test_rock_strength.py  test_static_elastic_properties.py  test_stress_calculations.py  test_wellbore_stability.py
