[project]
name = "geomechpy"
version = "0.0.2"
license = "LGPL-3.0-only"
description = ""
authors = [
    {name = "Alex Kutuev", email = "kutuev93@yandex.ru"},
    {name = "Florian Karpfinger"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/akutuev/GeomechPy"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

